--- a/.github/workflows/merge_stage_test.yml
+++ b/.github/workflows/merge_stage_test.yml
@@ -42,16 +42,13 @@ jobs:
         run: pip install torch==${{matrix.torch}}+cpu torchvision==${{matrix.torchvision}}+cpu -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install MMEngine
         run: pip install git+https://github.com/open-mmlab/mmengine.git@main
-      - name: Install MMCV and MMDet
+      - name: Install MMCV
         run: |
           pip install -U openmim
           mim install 'mmcv >= 2.0.0rc1'
-          mim install 'mmdet >= 3.0.0rc2'
       - name: Install other dependencies
         run: |
           pip install -r requirements/tests.txt
-          pip install git+https://github.com/openai/CLIP.git
-          pip install imageio-ffmpeg
       - name: Build and install
         run: rm -rf .eggs && pip install -e .
       - name: Run unittests and generate coverage report
@@ -95,17 +92,13 @@ jobs:
         run: pip install torch==${{matrix.torch}}+cpu torchvision==${{matrix.torchvision}}+cpu -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install MMEngine
         run: pip install git+https://github.com/open-mmlab/mmengine.git@main
-      - name: Install MMCV and MMDet
+      - name: Install MMCV
         run: |
           pip install -U openmim
           mim install 'mmcv >= 2.0.0rc1'
-          mim install 'mmdet >= 3.0.0rc2'
       - name: Install other dependencies
         run: |
           pip install -r requirements/tests.txt
-          pip install git+https://github.com/openai/CLIP.git
-          pip install imageio-ffmpeg
-
       - name: Build and install
         run: rm -rf .eggs && pip install -e .
       - name: Run unittests and generate coverage report
@@ -156,11 +149,9 @@ jobs:
         run: python -m pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
       - name: Install mmediting dependencies
         run: |
-          pip install git+https://github.com/open-mmlab/mmengine.git@main
           pip install -U openmim
           mim install 'mmcv >= 2.0.0rc1'
           pip install -r requirements/tests.txt
-          pip install imageio-ffmpeg
       - name: Build and install
         run: |
           python setup.py check -m -s
@@ -201,10 +192,7 @@ jobs:
           pip install git+https://github.com/open-mmlab/mmengine.git@main
           pip install -U openmim
           mim install 'mmcv >= 2.0.0rc1'
-          mim install 'mmdet >= 3.0.0rc2'
           pip install -r requirements/tests.txt
-          pip install imageio-ffmpeg
-          pip install git+https://github.com/openai/CLIP.git
       - name: Build and install
         run: |
           python setup.py check -m -s
@@ -239,10 +227,7 @@ jobs:
           python -m pip install git+https://github.com/open-mmlab/mmengine.git@main
           python -m pip install -U openmim
           mim install 'mmcv >= 2.0.0rc1'
-          mim install 'mmdet >= 3.0.0rc2'
           python -m pip install -r requirements/tests.txt
-          python -m pip install git+https://github.com/openai/CLIP.git
-          python -m pip install imageio-ffmpeg
       - name: Build and install
         run: |
           python -m pip install -e .
