--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ docs/en/_tmp/
 docs/zh_cn/_build/
 docs/zh_cn/_tmp/
 requirements/src/
-docs/en/api/generated
+_autosummary/
 
 # PyBuilder
 target/
