--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,14 @@ workflows:
             mmedit/.* lint_only false
             requirements/.* lint_only false
             tests/.* lint_only false
-            tools/.* lint_only false
-            configs/.* lint_only false
             .circleci/.* lint_only false
+            tools/.* lint_only true
+            configs/.* lint_only true
+            docs/.* lint_only true
             .dev_scripts/.* lint_only true
-          base-revision: 1.x
+            .github/.* lint_only true
+            demo/.* lint_only true
+          base-revision: dev-1.x
           # this is the path of the configuration we should trigger once
           # path filtering and pipeline parameter value updates are
           # complete. In this case, we are using the parent dynamic
