--- a/configs/cyclegan/metafile.yml
+++ b/configs/cyclegan/metafile.yml
@@ -20,7 +20,7 @@ Models:
     Metrics:
       FID: 124.8033
       IS: 1.792
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_resnet_in_1x1_80k_facades_20210902_165905-5e2c0876.pth
 - Config: configs/cyclegan/cyclegan_lsgan-id0-resnet-in_1xb1-80kiters_facades.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -33,7 +33,7 @@ Models:
     Metrics:
       FID: 125.1694
       IS: 1.905
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_id0_resnet_in_1x1_80k_facades_convert-bgr_20210902_164411-d8e72b45.pth
 - Config: configs/cyclegan/cyclegan_lsgan-resnet-in_1xb1-250kiters_summer2winter.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -46,7 +46,7 @@ Models:
     Metrics:
       FID: 83.7177
       IS: 2.771
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_resnet_in_1x1_246200_summer2winter_convert-bgr_20210902_165932-fcf08dc1.pth
 - Config: configs/cyclegan/cyclegan_lsgan-id0-resnet-in_1xb1-250kiters_summer2winter.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -59,7 +59,7 @@ Models:
     Metrics:
       FID: 83.1418
       IS: 2.72
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_id0_resnet_in_1x1_246200_summer2winter_convert-bgr_20210902_165640-8b825581.pth
 - Config: configs/cyclegan/cyclegan_lsgan-resnet-in_1xb1-250kiters_summer2winter.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -72,7 +72,7 @@ Models:
     Metrics:
       FID: 72.8025
       IS: 3.129
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_resnet_in_1x1_246200_summer2winter_convert-bgr_20210902_165932-fcf08dc1.pth
 - Config: configs/cyclegan/cyclegan_lsgan-id0-resnet-in_1xb1-250kiters_summer2winter.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -85,7 +85,7 @@ Models:
     Metrics:
       FID: 73.5001
       IS: 3.107
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_id0_resnet_in_1x1_246200_summer2winter_convert-bgr_20210902_165640-8b825581.pth
 - Config: configs/cyclegan/cyclegan_lsgan-resnet-in_1xb1-270kiters_horse2zebra.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -98,7 +98,7 @@ Models:
     Metrics:
       FID: 64.5225
       IS: 1.418
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_resnet_in_1x1_266800_horse2zebra_convert-bgr_20210902_170004-a32c733a.pth
 - Config: configs/cyclegan/cyclegan_lsgan-id0-resnet-in_1xb1-270kiters_horse2zebra.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -111,7 +111,7 @@ Models:
     Metrics:
       FID: 74.777
       IS: 1.542
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_id0_resnet_in_1x1_266800_horse2zebra_convert-bgr_20210902_165724-77c9c806.pth
 - Config: configs/cyclegan/cyclegan_lsgan-resnet-in_1xb1-270kiters_horse2zebra.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -124,7 +124,7 @@ Models:
     Metrics:
       FID: 141.1517
       IS: 3.154
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_resnet_in_1x1_266800_horse2zebra_convert-bgr_20210902_170004-a32c733a.pth
 - Config: configs/cyclegan/cyclegan_lsgan-id0-resnet-in_1xb1-270kiters_horse2zebra.py
   In Collection: 'CycleGAN: Unpaired Image-to-Image Translation Using Cycle-Consistent
@@ -137,5 +137,5 @@ Models:
     Metrics:
       FID: 134.3728
       IS: 3.091
-    Task: Image2Image Translation
+    Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/cyclegan/refactor/cyclegan_lsgan_id0_resnet_in_1x1_266800_horse2zebra_convert-bgr_20210902_165724-77c9c806.pth
