--- a/.github/workflows/merge_stage_test.yml
+++ b/.github/workflows/merge_stage_test.yml
@@ -9,6 +9,7 @@ on:
       - '.dev_scripts/**'
       - '.circleci/**'
       - 'configs/**'
+      - 'projects/**'
 
     branches:
       - dev-1.x
